<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_classroomName"
        style="@style/TextAbout.Black"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:textSize="20sp"
        tools:text="Nama Kelas" />

    <TextView
        style="@style/TextAbout.Subtitle"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/class_description" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                style="@style/TextSpec.Field"
                android:text="@string/courseCode" />

            <TextView
                android:id="@+id/tv_code"
                style="@style/TextSpec.Value"
                tools:text="TSI 101" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                style="@style/TextSpec.Field"
                android:text="@string/sks" />

            <TextView
                android:id="@+id/tv_sks"
                style="@style/TextSpec.Value"
                tools:text="3 SKS" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                style="@style/TextSpec.Field"
                android:text="@string/schedule" />

            <TextView
                android:id="@+id/tv_schedule"
                style="@style/TextSpec.Value"
                tools:text="Hari | Jam" />
        </TableRow>

    </TableLayout>

    <TextView
        style="@style/TextAbout.Subtitle"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/attendance_description" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="5dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_attendances"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/attendances_list"/>

    </LinearLayout>

</LinearLayout>