<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activity.MeetingDetailActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        app:cardCornerRadius="50dp"
        android:layout_marginStart="-50dp"
        app:cardBackgroundColor="@color/colorCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="50dp"
            android:padding="5dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                tools:ignore="UselessParent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp">

                    <TextView
                        style="@style/TextSpec.Field"
                        android:textStyle="bold"
                        android:text="@string/classroom" />

                    <TextView
                        android:id="@+id/tv_classroomName"
                        style="@style/TextSpec.Value"
                        tools:text="Struktur Data dan Algoritma B" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp">

                    <TextView
                        style="@style/TextSpec.Field"
                        android:textStyle="bold"
                        android:text="@string/sks" />

                    <TextView
                        android:id="@+id/tv_sks"
                        style="@style/TextSpec.Value"
                        tools:text="3 SKS" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextSpec.Field"
                        android:textStyle="bold"
                        android:text="@string/schedule" />

                    <TextView
                        android:id="@+id/tv_schedule"
                        style="@style/TextSpec.Value"
                        tools:text="Hari | Jam" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_meetingNumber"
        style="@style/TextAbout.Black"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:textSize="20sp"
        tools:text="Pertemuan ke-1" />

    <TextView
        style="@style/TextAbout.Subtitle"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:text="@string/meeting_description" />

    <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp">

         <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp">

             <TextView
                 style="@style/TextSpec.Field"
                 android:text="@string/date" />

             <TextView
                 android:id="@+id/tv_date"
                 style="@style/TextSpec.Value"
                 tools:text="Date" />
         </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                style="@style/TextSpec.Field"
                android:text="@string/time" />

            <TextView
                android:id="@+id/tv_time"
                style="@style/TextSpec.Value"
                tools:text="08:00 - 10:00" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                style="@style/TextSpec.Field"
                android:text="@string/topic" />

            <TextView
                android:id="@+id/tv_topic"
                style="@style/TextSpec.Value"
                tools:text="Tipe Data C++" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TextSpec.Field"
                android:text="@string/submission_status" />

            <TextView
                android:id="@+id/tv_presence_status"
                style="@style/TextSpec.Value"
                tools:text="Hadir" />
        </TableRow>

    </TableLayout>
</LinearLayout>