<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activity.ChangePasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_key_2"
            android:drawablePadding="18dp"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:hint="@string/old_password"
            style="@style/TextList"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_key"
            android:drawablePadding="18dp"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:hint="@string/new_password"
            style="@style/TextList"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/et_password_confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_key"
            android:drawablePadding="18dp"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:hint="@string/password_confirmation"
            style="@style/TextList"
            android:imeActionLabel="@string/action_save"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"/>

        <Button
            android:id="@+id/btn_change_pass"
            android:layout_margin="22dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="64dp"
            android:enabled="true"
            android:text="@string/action_save_changes"
            style="@style/Button"
            app:layout_constraintTop_toBottomOf="@+id/et_password_confirmation"
            app:layout_constraintVertical_bias="0.2" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>