<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activity.EditLocationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2" />

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_home_2"
            android:drawablePadding="18dp"
            android:inputType="textMultiLine"
            android:hint="@string/address"
            style="@style/TextList"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/et_latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_marker_2"
            android:drawablePadding="18dp"
            android:inputType="text"
            android:hint="@string/latitude"
            style="@style/TextList"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/et_longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_marker_2"
            android:drawablePadding="18dp"
            android:inputType="text"
            android:hint="@string/longitude"
            style="@style/TextList"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"/>

        <Button
            android:id="@+id/btn_edit_location"
            android:layout_margin="22dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="64dp"
            android:enabled="true"
            android:text="@string/action_save_changes"
            style="@style/Button"
            app:layout_constraintTop_toBottomOf="@+id/et_longitude"
            app:layout_constraintVertical_bias="0.2" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>