<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.AccountFragment"
    android:padding="20dp"
    android:layout_gravity="center">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/content_desc_2"
        android:src="@drawable/profilepic"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_name"
        style="@style/TextAbout.Black"
        android:layout_marginTop="20dp"
        tools:text="Nama Mahasiswa"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/profile_img"
        app:layout_constraintStart_toStartOf="@+id/profile_img"
        app:layout_constraintTop_toBottomOf="@+id/profile_img" />

    <TextView
        android:id="@+id/tv_nim"
        style="@style/TextAbout.Subtitle"
        android:layout_marginTop="8dp"
        tools:text="NIM"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <Button
        android:id="@+id/btn_change_pass"
        style="@style/Button"
        android:layout_marginTop="40dp"
        android:text="@string/change_pass"
        app:layout_constraintEnd_toEndOf="@+id/tv_nim"
        app:layout_constraintStart_toStartOf="@+id/tv_nim"
        app:layout_constraintTop_toBottomOf="@+id/tv_nim"/>

    <Button
        android:id="@+id/btn_logout"
        style="@style/Button"
        android:backgroundTint="@color/red"
        android:layout_marginTop="8dp"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="@+id/btn_change_pass"
        app:layout_constraintStart_toStartOf="@+id/btn_change_pass"
        app:layout_constraintTop_toBottomOf="@+id/btn_change_pass"/>

</androidx.constraintlayout.widget.ConstraintLayout>