<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activity.LocationDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/TextAbout.Black"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="26sp"
            tools:text="Nama Mahasiswa" />

        <TextView
            android:id="@+id/tv_nim"
            style="@style/TextAbout.Black"
            android:layout_marginBottom="8dp"
            android:textSize="22sp"
            tools:text="NIM" />

        <TextView
            style="@style/TextAbout.Subtitle"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/loc_description" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/address" />

                <TextView
                    android:id="@+id/tv_address"
                    style="@style/TextSpec.Value"
                    tools:text="Alamat" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/latitude" />

                <TextView
                    android:id="@+id/tv_latitude"
                    style="@style/TextSpec.Value"
                    tools:text="Longitude" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/longitude" />

                <TextView
                    android:id="@+id/tv_longitude"
                    style="@style/TextSpec.Value"
                    tools:text="Latitude" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/submission_status" />

                <TextView
                    android:id="@+id/tv_submission_status"
                    style="@style/TextSpec.Value"
                    tools:text="Submission Status" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="176dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_edit"
            android:visibility="invisible"
            android:clickable="true"
            app:borderWidth="0dp"
            app:elevation="16dp"
            android:backgroundTint="@color/colorAccent"
            app:pressedTranslationZ="12dp"
            android:id="@+id/fab_editLocation"
            android:focusable="true" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="106dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_trash"
            android:visibility="invisible"
            android:clickable="true"
            app:borderWidth="0dp"
            app:elevation="16dp"
            android:backgroundTint="@color/colorAccent"
            app:pressedTranslationZ="12dp"
            android:id="@+id/fab_deleteLocation"
            android:focusable="true" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_menu"
            android:visibility="visible"
            android:clickable="true"
            app:borderWidth="0dp"
            app:elevation="16dp"
            android:backgroundTint="@color/colorAccent"
            app:pressedTranslationZ="12dp"
            android:id="@+id/fab"
            android:focusable="true"/>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>